@@ -1004,16 +1004,15 @@ See `bug-reference-url-format' for further details.")
     (setq fill-column 72))
   (unless (local-variable-p 'tab-width (current-buffer))
     (setq tab-width 4))
-  (static-if (fboundp 'bug-reference-prog-mode)
-      (progn
-	(unless (local-variable-p 'bug-reference-bug-regexp (current-buffer))
-	  (set (make-local-variable 'bug-reference-bug-regexp)
-	       ebuild-mode-bug-regexp))
-	(unless (local-variable-p 'bug-reference-url-format (current-buffer))
-	  (set (make-local-variable 'bug-reference-url-format)
-	       ebuild-mode-bug-url-format))
-	(if ebuild-mode-enable-bug-reference
-	    (bug-reference-prog-mode 1))))
+  (when (and (fboundp 'bug-reference-prog-mode)
+	     ebuild-mode-enable-bug-reference)
+    (unless (local-variable-p 'bug-reference-bug-regexp (current-buffer))
+      (set (make-local-variable 'bug-reference-bug-regexp)
+	   ebuild-mode-bug-regexp))
+    (unless (local-variable-p 'bug-reference-url-format (current-buffer))
+      (set (make-local-variable 'bug-reference-url-format)
+	   ebuild-mode-bug-url-format))
+    (bug-reference-prog-mode 1))
   (cond
    ((derived-mode-p 'conf-unix-mode)
     (unless (local-variable-p 'paragraph-separate (current-buffer))
